--- a/API.ini
+++ b/API.ini
@@ -1,3 +1,8 @@
 [uwsgi]
 module = wsgi:app
 http-socket = 0.0.0.0:5000
+master = true
+processes = 5
+chmod-socket = 660
+vacuum = true
+die-on-term = true
