--- a/API.ini
+++ b/API.ini
@@ -1,8 +1,7 @@
 [uwsgi]
 module = wsgi:app
-http-socket = 0.0.0.0:5000
+socket = 127.0.0.1:5000
 master = true
-processes = 5
-chmod-socket = 660
+processes =5
 vacuum = true
 die-on-term = true
