--- a/k8s/API.yml
+++ b/k8s/API.yml
@@ -58,14 +58,19 @@ spec:
           initialDelaySeconds: 10
           periodSeconds: 5
 
----
 kind: Service
 apiVersion: v1
 metadata:
   name: api
 spec:
-  selector:
-    app: api
   ports:
-    - port: 5000
-    # Default port for image
+  - name: api
+    port: 3000
+    nodePort: 30005
+    protocol: TCP
+  selector:
+     app: api
+  type: NodePort
+status:
+  loadBalancer: {}
+---
