--- a/k8s/mariadb/mariadb-ss.yml
+++ b/k8s/mariadb/mariadb-ss.yml
@@ -33,7 +33,7 @@ spec:
         - name: mysql
           containerPort: 3306
         env:
-        # kubectl create secret generic mysql-pass --from-file=password.txt
+        # kubectl create secret generic mariadb
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -73,7 +73,6 @@ spec:
       name: mysql-datadir
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      # uncomment if using slow storageClass on AWS
       # then no need for running pv or pvc manifests
       storageClassName: slow
       resources:
